--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "bower"                 : "~1.2.8",
+    "bower"                 : ">=1.8.8",
     "grunt"                 : "~0.4.2",
     "grunt-contrib-jshint"  : "~0.8.0",
     "grunt-contrib-uglify"  : "~0.3.2",
