--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {},
   "devDependencies": {
     "bower"                 : ">=1.8.8",
-    "grunt"                 : "~0.4.2",
+    "grunt": ">=1.3.0",
     "grunt-contrib-jshint"  : "~0.8.0",
     "grunt-contrib-uglify"  : "~0.3.2",
     "grunt-contrib-less"    : "~0.9.0",
